--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,7 +5,9 @@ body {
 }
 // container
 .container-md {
+	padding-top: 30px;
 	width: 100%;
+	min-width: 240px;
 	max-width: 576px;
 	margin: 0 auto;
 	font-family: 'Rubik', sans-serif;
@@ -13,16 +15,30 @@ body {
 // comment
 .comment-container {
 	display: flex;
-    width: 100%;
-    margin: 8px 0;
-    padding: 15px;
+	width: 100%;
+	margin: 8px 0;
+	padding: 15px;
 	background-color: #fff;
-    border-radius: 6px;
-    font-size: 12px;
+	border-radius: 6px;
+	font-size: 12px;
+}
+.comment-content {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.comment-content-reply {
+	img {
+		margin-right: 8px;
+		width: 10px;
+	}
+	color: #40438d;
+	font-weight: 500;
+	cursor: pointer;
 }
 .comment-content-text {
-    margin-top: 12px;
-    color: hsl(211, 10%, 45%);
+	margin-top: 12px;
+	color: hsl(211, 10%, 45%);
 }
 
 // comment details
@@ -48,7 +64,7 @@ body {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-    margin-right: 12px;
+	margin-right: 16px;
 	background-color: #f5f6fa;
 	border-radius: 6px;
 }
@@ -84,4 +100,52 @@ body {
 	color: #4b50a4;
 	font-size: 12px;
 	font-weight: 500;
+}
+
+// reply
+.reply-container {
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: start;
+	.reply-line-container {
+		display: flex;
+		flex-direction: row;
+		width: 60px;
+		min-height: fit-content;
+		background-color: #f5f6fa;
+		.reply-line {
+			width: 50%;
+			height: 100%;
+			border-right: 2px solid hsl(223, 19%, 93%);
+		}
+	}
+}
+
+// reply ADD
+
+.reply-add-img {
+	margin-right: 12px;
+	width: 28px;
+	height: 28px;
+}
+.reply-add-textarea {
+	width: calc(100% - 28px - 65px);
+	min-width: calc(100% - 28px - 65px);
+	max-width: calc(100% - 28px - 65px);
+	height: 60px;
+	max-height: 120px;
+	padding: 5px;
+}
+.reply-add-button {
+	height: 30px;
+	width: 65px;
+	margin-left: 8px;
+	background-color: #5357b6;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	font-size: 12px;
+	cursor: pointer;
 }
