--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,6 +2,7 @@
 
 body {
 	position: relative;
+	padding: 0 8px;
 	background-color: #f5f6fa;
 }
 .overflow-hidden {
@@ -9,6 +10,13 @@ body {
 }
 .flex {
 	display: flex;
+}
+
+.space-between {
+	justify-content: space-between;
+}
+.vertical-center {
+	align-items: center;
 }
 .margin-left {
 	margin-left: auto;
@@ -19,7 +27,7 @@ body {
 .button {
 	height: 30px;
 	width: 65px;
-	
+
 	background-color: #5357b6;
 	color: white;
 	border: none;
@@ -35,7 +43,7 @@ body {
 
 // container
 .container-md {
-	padding-top: 30px;
+	padding: 30px 0;
 	width: 100%;
 	min-width: 240px;
 	max-width: 576px;
@@ -93,6 +101,15 @@ body {
 	color: hsl(211, 10%, 45%);
 	font-weight: 400;
 }
+.mark-current-user {
+	background-color: #5357aa;
+	color: white;
+	margin-left: 4px;
+	padding: 1px 4px;
+	font-size: 10px;
+	border-radius: 2px;
+
+}
 // score counter
 
 .score_counter-container {
@@ -105,6 +122,7 @@ body {
 }
 .score_counter-container-horizontal {
 	min-width: 70px;
+	margin-top: 8px;
 	padding: 4px 6px;
 	.score_counter-score {
 		margin: 3px 4px;
@@ -157,13 +175,23 @@ body {
 		}
 	}
 }
+@media (max-width: 576px) {
+	.reply-container {
+		.reply-line-container {
+			width: 15px;
+		}
+	}
+}
 .reply-to {
 	color: #4b50a4;
 	font-weight: 600;
 }
 
 // reply ADD
-
+.reply-add-container {
+	display: flex;
+	flex-direction: column;
+}
 .reply-add-img {
 	margin-right: 12px;
 	width: 28px;
@@ -184,7 +212,12 @@ body {
 .reply-add-textarea:active {
 	border: 1px solid #4b50a4;
 }
-
+@media (max-width: 576px) {
+	.reply-add-textarea {
+		width: 100%;
+		margin-bottom: 12px;
+	}
+}
 // edit comment window
 
 .edit-comment-container {
@@ -233,7 +266,6 @@ body {
 			button {
 				width: 45%;
 				height: 35px;
-				
 			}
 			.modal-cancel {
 				background-color: #67717e;
